--- a/wil.html
+++ b/wil.html
@@ -5,6 +5,6 @@
     <title>Wil Stinks</title>
 </head>
 <body>
-    <center>William Danly Dobbins stinks like poo.</center>
+    <h1><center>William Danley Dobbins stinks like poo.</center></h1>
 </body>
 </html>
