--- a/kira.html
+++ b/kira.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-    <center><title>Jingle bells kira smells.</title></center>
+    <center><title>Kira Orion</title></center>
+    <center><h1>Jingle bells kira smells.</h1></center>
     <center><h1>Hah. Joking.</h1></center>
 </head>
 
