--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>My Blog</h2>
                     <p>I'm the founder and owner of The &lt;&frasl;Source&gt; Code, a technology related blog.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Check It Out</a>
+                    <a href="#">Check It Out</a>
                 </div>
             </div>
         </div>
