--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <p class="intro-text">I'm a freelance coder, web and graphic designer, and 3d modeler.
-                        I'm also in 9th Grade.</p>
+                        <p class="intro-text">I'm a freelance coder, web and graphic designer, and 3d modeler.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,7 +89,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>My name is Edit. I'm 14.</p>
+                <p>My name is Edit.</p>
                 <p>I'm a freelance coder, web and graphic designer, and 3d modeler.</p>
                 <p>I started all of this in late 2013, and been doing it ever since.</p>
                 <p>If you have any questions you can find various ways to get in touch on the contact me page.</p>
@@ -105,7 +104,10 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>My Blog</h2>
                     <p>I'm the founder and owner of The &lt;&frasl;Source&gt; Code, a technology related blog.</p>
-                     <a href="#" class="btn btn-default btn-lg">Check It Out</a>
+                    <p>It hasn't launched yet, we'll let you know when it does. If your interested in helping out,</p>
+                    <p>you can contact me via email or skype at the bottom of the page.</p>
+                     <a href="#" class="btn btn-default btn-lg">Coming Soon</a>
+                    }
                 </div>
             </div>
         </div>
